--- a/software.html
+++ b/software.html
@@ -39,16 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://comgy.join.com/jobs/468277-software-engineering-praktikant-werkstudent-m-w-d'>Job @ Comgy (Berlin):  Software Engineering Prakti... | JOIN</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-?trid=33221b55-7baa-4189-992e-a7fac0c08950'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698552210-software-engineer-intern-part-time-full-time-'>RAKUNA Software Engineer Intern (Part-time/Full-time) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://comgy.join.com/jobs/468277-software-engineering-praktikant-werkstudent-m-w-d'>Job @ Comgy (Berlin):  Software Engineering Prakti... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-12378'>Senior Software Engineer - Akamai Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Cambridge United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/front-end-software-engineer-12379'>Front-end Software Engineer - Akamai Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oQ8LafwD&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=no0mpMwq'>NICE inContact Careers - Sr. Software Engineer (.NET)</a></h5> 
@@ -67,11 +75,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oucM9fwl&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nyAlpMw9'>Guidewire Software, Inc. Careers - Senior Software Engineer -  San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oucM9fwl&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nyAlpMw9'>Guidewire Software, Inc. Careers - Senior Software Engineer -  San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -139,7 +147,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kuonitumlare.recruitee.com/o/software-engineer-pitampura'>
+<h5><a href='https://kuonitumlare.recruitee.com/o/software-engineer-pitampura'>
       Software Engineer - Kuoni Tumlare
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -177,7 +185,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/smartly.io/a684bea2-eae6-489e-97b4-77d948ccab3e'>Smartly.io - Software Engineering Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/smartly.io/a684bea2-eae6-489e-97b4-77d948ccab3e'>Smartly.io - Software Engineering Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -213,7 +221,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oVtsbfwL&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nAKfpMwf'>New Relic Careers - Senior Software Engineer - Reliability Awareness</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oVtsbfwL&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nAKfpMwf'>New Relic Careers - Senior Software Engineer - Reliability Awareness</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Portland, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -261,7 +269,7 @@
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/software-engineer-ii-10338'>Software Engineer II - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/software-engineer-ii-10338'>Software Engineer II - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Missouri, Kansas City</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -285,7 +293,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -365,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -417,7 +425,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525762-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525762-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -430,14 +438,6 @@
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937489'>Job Application for Senior Software Engineer, Back End at Dataminr</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937490'>Job Application for Senior Software Engineer, Content at Dataminr</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937494'>Job Application for Software Engineer II, Platform at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
